# TP-POO-Nature-Reserve

./: Animal.cpp  Animal.h  Bife.cpp  Bife.h  CMakeLists.txt  Canguru.cpp  Canguru.h  Cenoura.cpp  Cenoura.h  Coelho.cpp  Coelho.h  Corpo.cpp  Corpo.h  Food.cpp  Food.h  Interface.cpp  Interface.h  Lobo.cpp  Lobo.h  Ovelha.cpp  Ovelha.h  README.md  Relva.cpp  Relva.h  Reserva.cpp  Reserva.h  Storage.cpp  Storage.h  Utils.cpp  Utils.h  directory_structure.txt  headers.h  main.cpp
tests/: CMakeLists.txt  test_animal.cpp
