cmake_minimum_required(VERSION 3.20)
project(TP2223)

set(CMAKE_CXX_STANDARD 17)

add_executable(TP2223 main.cpp headers.h Animal.cpp Animal.h Food.cpp Food.h Interface.cpp Interface.h Reserva.cpp Reserva.h Coelho.cpp Coelho.h Ovelha.cpp Ovelha.h Lobo.cpp Lobo.h Canguru.cpp Canguru.h Relva.cpp Relva.h Bife.cpp Bife.h Cenoura.cpp Cenoura.h Corpo.cpp Corpo.h Utils.cpp Utils.h Storage.cpp Storage.h)
